Revision history for Perl extension Coro.

2.1
	- use a simpler and hopefully more robust way to clone padlists
          (uses less memory and a perl function instead of our own).
        - coro can now create a stack guard area on many architectures.
	- updated libcoro with a workaround for OS X,
          pach by Michael Schwern.

2.0  Tue Oct 24 05:47:17 CEST 2006
	- support additional aio requests in Coro::AIO.

1.9  (never properly released due to a glitch)

1.8  Thu Feb  2 00:59:06 CET 2006
	- applied suggested patch by SAMV to avoid problems during stupid
          mark & sweep gc run.
        - applied patch by Scott Walters for 5.9.3 compatibility.

1.7  Tue Dec 27 01:41:58 CET 2005
	- added Coro::AIO, a thin wrapper around IO::AIO.
	- improved Makefile.PL explanations.

1.6  Mon Dec 12 21:30:05 CET 2005
	- additionally save PM_curpm might fix as-of-yet
          unseen problems with regex matches being attributed to the
          wrong package.
        - add t/10_bugs.t, which currently checks against imho broken
          perls that use 0.26MB of stack space per Perl_magic_get
          invocation (newer linuxes) as opposed to the 0.0002MB perl
          normally uses.
        - make stacksize configurable for the ultimate debian experience.

1.51 Mon Dec 12 18:48:36 CET 2005
	- remove debugging warn() accidentally left in Coro::Select.

1.5  Tue Nov 29 13:32:44 CET 2005
	- use Coro::Event inside Coro::Select to avoid spurious deadlocks.
        - fix Coro::Select 'select'.
        - strict'ify some modules.
	- libcoro errornously restored the SIGUSR2 handler to SIGUSR1.
        - use XSLoader in selected modules.
        - remove some 5.6 compatibility cruft.

1.4  Tue Sep  6 00:11:05 CEST 2005
	- libcoro did not take into account the trampoline on amd64,
          when 'l'inux method was used.

1.31 Tue Aug 30 23:31:33 CEST 2005
	- some portability fixes/workarounds.

1.3  Sat Aug 20 03:08:56 CEST 2005
	- no code changes. module seems to work fine.